RESOLVED FIXED Bug 260183
deadline-max-rAF.html fails
https://bugs.webkit.org/show_bug.cgi?id=260183
Summary deadline-max-rAF.html fails
Ryosuke Niwa
Reported 2023-08-14 17:01:48 PDT
LayoutTests/imported/w3c/web-platform-tests/requestidlecallback/deadline-max-rAF.html is failing.
Attachments
Ryosuke Niwa
Comment 1 2023-08-14 17:28:45 PDT
EWS
Comment 2 2023-08-17 12:04:20 PDT
Committed 267008@main (7090728677dd): <https://commits.webkit.org/267008@main> Reviewed commits have been landed. Closing PR #16691 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2023-08-17 12:05:32 PDT
Note You need to log in before you can comment on or make changes to this bug.